{
    "name": "InputController",
    "maps": [
        {
            "name": "Generic",
            "id": "cf25986b-d95d-46c0-9cd8-8e5e2cdb533e",
            "actions": [
                {
                    "name": "StartContact",
                    "type": "PassThrough",
                    "id": "64d14efb-fa53-4b05-b8c0-dd98f82283d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "b1c2b842-0108-4034-bfc9-2ddc85ae0576",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a6e6725e-b798-4f49-829c-c7ba8e4dc484",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "379c6ed8-7c63-4a7b-b300-9717658d22c0",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "InputController",
            "bindingGroup": "InputController",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}